Slight layout fix
jQuery-UI issue workaround: menu sometimes appears to wide and leads to
a horizontal scroll on the whole page. Ughhhh, ugly!

--- a/index.css
+++ b/index.css
@@ -17,7 +17,8 @@ body {
     right: 0;
     top: 0;
     width: 31em;
-    overflow: auto;
+    overflow-x: hidden;
+    overflow-y: auto;
 }
 
 #settings, #status, #legend {
